--- a/assets/bower.json
+++ b/assets/bower.json
@@ -23,7 +23,13 @@
     "sprintf": "~1.0.3"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.3.0",
+    "angular-google-maps": "~2.2.1",
+    "angular-simple-logger": "~0.1.5",
+    "lodash": "~3.10.1",
+    "angular-material": "~0.11.4",
+    "angular-aria": "~1.4.7",
+    "angular-ui-slider": "~0.1.4"
   },
   "appPath": "app",
   "moduleName": "ndtApp"
