--- a/assets/package.json
+++ b/assets/package.json
@@ -4,6 +4,7 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
+    "angular-mocks": "~1.4.7",
     "connect": "^3.4.0",
     "connect-livereload": "^0.5.3",
     "grunt": "^0.4.5",
@@ -28,13 +29,20 @@
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
-    "jasmine-core": "^2.3.4",
+    "jasmine-core": "~2.3.4",
     "jasmine-jquery": "~1.3",
     "jshint-stylish": "^1.0.0",
-    "karma": "^0.13.5",
-    "karma-jasmine": "^0.3.6",
+    "karma": "~0.13.14",
+    "karma-jasmine": "~0.3.6",
+    "karma-phantomjs-launcher": "~0.2.1",
     "load-grunt-tasks": "^3.1.0",
-    "time-grunt": "^1.0.0"
+    "phantomjs": "~1.9.18",
+    "time-grunt": "^1.0.0",
+    "chai": "~3.4.0",
+    "karma-chai": "~0.1.0",
+    "mocha": "~2.3.3",
+    "karma-mocha": "~0.2.0",
+    "karma-chrome-launcher": "~0.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
